# WebGPU

./: .gitignore  .gitmodules  CMakeLists.txt  attributed.h  context.h  gltfLoader.cpp  gltfLoader.h  imgui_wrapper.h  main.cpp  managers.h  material.h  mesh.h  node.h  pass.h  pipeline.h  renderer.h  scene.h  shader.h  uniformsBuffer.cpp  uniformsBuffer.h  utils.cpp  utils.h
data/: background.wgsl  dilatation.wgsl  pbr.wgsl  sahder_1.wgsl  unlit.wgsl
ext/imgui/backends/: imgui_impl_wgpu.cpp
ext/webgpu/cmake/: FetchDawn.cmake
